C09 tenta resolver problema do texto sobre imagem com z-index

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
   height: fit-content;
   border: solid black 1px;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 #meme-image {
